﻿----------------------
phpMyAdmin - Changelog
----------------------

$Id$
$Source$

2006-02-21 Michal Čihař  <michal@cihar.com>
    * scripts/setup.php:
        - Various bug fixes (bug #1435700, bug #1435806, undefined indexes).
        - XHTML fixes (patch #1435772, thanks to Matt LaPlante - cyberdog3k).
    * libraries/export/sql.php: New line before values (RFE #1435919).
    * libraries/Config.class.php: Trim spaces from config file to avoid
      unwanted outpu (patch #1431566, thanks to Piotr_Skowronek -
      piotr_skowronek).
    * libraries/iconv_wrapper.lib.php, libraries/charset_conversion.lib.php,
      libraries/database_interface.lib.php: Compatibility with iconv charset
      names on AIX (patch #1420704, thanks to Björn Wiberg - bwiberg).
    * libraries/import.lib.php: Skip byte order marks (bug #1423362).

2006-02-21 Sebastian Mendel <cybot_tm@users.sourceforge.net>
    * libraries/common.lib.php PMA_getUvaCondition():
      do not test for isset but strlen on orgname of table
    * libraries/Table.class.php: *NEW* class PMA_Table
    * tbl_addfield.php, tbl_create.php:
      use Table.class.php
    * db_details_qbe.php, db_details_structure.php, tbl_alter.php, sql.php,
      libraries/common.lib.php, libraries/tbl_properties_table_info.inc.php,
      libraries/display_export.lib.php, libraries/display_tbl.lib.php,
      libraries/get_foreign.lib.php, libraries/relation.lib.php:
      moved PMA_generateFieldSpec(), PMA_tableIsView(), PMA_countRecords(),
      PMA_generateAlterTable() into class PMA_Table
    * db_operations.php, tbl_move_copy.php, tbl_properties_operations.php,
      libraries\Table.class.php, libraries\tbl_move_copy.php:
      merged libraries\tbl_move_copy.php in class PMA_Table
    * libraries/Table.class.php:
      minor fixes and improvements, formating, documentation
    * libraries/relation.lib.php:
      check if $cfg['Server']['pmadb'] really exists and is selectable,
      minor tweaks and formating